--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>website practice</title>
-    <!-- link rel = "stylesheet" href = "style.css" -->
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-    <h1>Hello World!</h1>
-    <p>練習</p>
+    <div class="header">
+      <div class="header-text">
+      <h1>ウェブサイトの練習</h1>
+      <h3>s1270166 Natsu Matsumoto</h3>
+      </div>
+    </div>
+
+    <div class="main">
+      <h1>Hello World!</h1>
+      <p>練習</p>
+    </div>
+
+    <div class="footer">
+    </div>
+
   </body>
 </html>
