--- a/index.html
+++ b/index.html
@@ -7,19 +7,46 @@
   </head>
 
   <body>
+
     <div class="header">
-      <div class="header-text">
-      <h1>ウェブサイトの練習</h1>
-      <h3>s1270166 Natsu Matsumoto</h3>
+      <div class="header-wrapper">
+          <div class="header-logo">ウェブサイトの練習</div>
+          <h3>s1270166 Natsu Matsumoto</h3>
+        </div>
       </div>
     </div>
 
     <div class="main">
-      <h1>Hello World!</h1>
-      <p>練習</p>
+      <div class="main-wrapper">
+        <h1>掲示板</h1>
+
+        <div class="board-wrapper">
+          <div class="board-left-wrapper">
+            <div class="board-left">
+              <p>ここに投稿した内容がでるようにしたい</p>
+            </div>
+          </div>
+          <div class="board-right-wrapper">
+            <div class="board-right">
+              <p>名前</p>
+              <input>
+              <p>件名</p>
+              <input>
+              <p>内容</p>
+              <textarea></textarea>
+              <p>※投稿前に内容を確認※</p>
+              <input class="submit-btn" type="submit" value="投稿">
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
 
     <div class="footer">
+      <div class="footer-wrapper">
+        <div class="footer-logo">ここはフッターだよ</div>
+      </div>
     </div>
 
   </body>
